// Mealiver-IT — 선착순 쿠폰 발급 시스템 ERD
// 02_아키텍처.md 1절 도메인 모델 기준. dbdiagram.io 에 그대로 붙여넣기.

Enum membership_tier {
  PRIVATE [note: '이등병 (기본값)']
  PFC [note: '일병']
  CORPORAL [note: '상병']
  SERGEANT [note: '병장']
}

Table user {
  id bigint [pk, increment]
  login_id varchar [not null, unique, note: '가상 회원 식별자']
  name varchar [not null, note: 'PII - 마스킹 대상']
  phone varchar [not null, note: 'PII - 마스킹 대상']
  email varchar [not null, note: 'PII - 마스킹 대상']
  membership_tier membership_tier [not null, default: 'PRIVATE', note: 'orders 집계 기반 매월 1일 배치 자동 산정 (FR-MBR-001,002). 최초 더미데이터 생성 시점 값은 orders 더미데이터로부터 역산']
  tier_calculated_at datetime [note: '마지막 계급 재산정 배치 실행 시각']
  created_at datetime [not null, default: `now()`]
}

Table orders {
  id bigint [pk, increment]
  user_id bigint [not null]
  order_amount decimal [not null, note: '상품 금액(할인 전)']
  paid_amount decimal [not null, note: '결제 금액(할인 후) — 계급 집계 10,000원 기준 컬럼 (FR-MBR-003, 팀 확정: 결제금액 기준)']
  status varchar [not null, note: 'ENUM: COMPLETED, CANCELED, REFUNDED']
  ordered_at datetime [not null]
  completed_at datetime [note: '배달완료 시각. 계급 집계는 status=COMPLETED AND completed_at 기준 캘린더 월로 산정']
  created_at datetime [not null, default: `now()`]

  indexes {
    (user_id, status, completed_at) [name: 'idx_orders_tier_calc']
  }
}

Table membership_tier_log {
  id bigint [pk, increment]
  user_id bigint [not null]
  from_tier membership_tier
  to_tier membership_tier [not null]
  order_count int [not null, note: '해당 배치 산정에 집계된 완료 주문 건수']
  calculated_at datetime [not null, default: `now()`, note: '배치 실행 시각(매월 1일)']
}

Table campaign {
  id bigint [pk, increment]
  name varchar [not null]
  total_stock int [not null, note: '최초 재고, 불변']
  remaining_stock int [not null, note: '동시성 제어 대상 카운터']
  open_at datetime [note: '예약 오픈 (선택 확장)']
  close_at datetime
  status varchar [not null, note: 'ENUM: READY, OPEN, CLOSED']
  min_membership_tier membership_tier [note: 'NULL이면 전 회원 대상, 설정 시 회원 전용 쿠폰']
  version bigint [not null, default: 0, note: '@Version, 낙관적 락 옵션용']
}

Table coupon {
  id bigint [pk, increment]
  campaign_id bigint [not null]
  discount_type varchar [not null, note: 'ENUM: FIXED, RATE']
  discount_value decimal [not null]
  min_order_amount decimal [note: '최소 주문금액 조건부 할인, NULL이면 조건 없음']
  valid_days int [not null, note: '발급일로부터 유효기간']
}

Table coupon_issue {
  id bigint [pk, increment]
  campaign_id bigint [not null]
  user_id bigint [not null]
  coupon_code varchar [not null, unique, note: '발급된 실물 쿠폰 식별자']
  discount_type varchar [not null, note: 'ENUM: FIXED, RATE — 발급 시점 스냅샷']
  discount_value decimal [not null, note: '발급 시점 계급별 할인율/금액 스냅샷(02_아키텍처.md 6.1절 TierDiscountPolicy). 이후 계급 변동과 무관하게 불변']
  status varchar [not null, note: 'ENUM: ISSUED, USED, CANCELED, EXPIRED']
  idempotency_key varchar [not null, unique, note: '발급 요청 중복 방지 키']
  issued_at datetime [not null]
  used_at datetime
  canceled_at datetime
  expired_at datetime
  version bigint [not null, default: 0, note: '@Version, 상태전이 낙관적 락']
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]

  indexes {
    (campaign_id, user_id) [unique, name: 'uk_campaign_user']
    campaign_id [name: 'idx_ci_campaign']
  }
}

Table coupon_state_log {
  id bigint [pk, increment]
  coupon_issue_id bigint [not null]
  from_status varchar
  to_status varchar [not null]
  request_id varchar [not null, note: '상태변경 요청 idempotency key']
  created_at datetime [not null, default: `now()`]
}

Ref: coupon.campaign_id > campaign.id
Ref: coupon_issue.campaign_id > campaign.id
Ref: coupon_issue.user_id > user.id
Ref: coupon_state_log.coupon_issue_id > coupon_issue.id
Ref: orders.user_id > user.id
Ref: membership_tier_log.user_id > user.id
